# deepseek-ocr-local

./: .gitignore  DEVICE_SUPPORT.md  Dockerfile  Dockerfile.macos  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  README.md  REFACTOR_SUMMARY.md  TEST_ON_WINDOWS.md  advanced_examples.py  deepseek_ocr_pdf.py  docker-compose.yml  pyproject.toml  quick_test.py
src/deepseek_ocr/: __init__.py  device_config.py
